--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -7,33 +7,53 @@
 </head>
 <body>
 
-<div class="container my-2">
-    <h2>Product' List</h2>
-    <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Create Product</a>
+<div class="container my-4">
+    <h2 class="mb-4">Product List</h2>
 
-    <table border="1" class="table table-striped table-responsive-md">
-        <thead>
+    <a th:href="@{/product/create}"
+       class="btn btn-primary btn-sm mb-3">
+        Create Product
+    </a>
+
+    <table class="table table-striped table-responsive-md">
+        <thead class="thead-dark">
         <tr>
             <th scope="col">Product Name</th>
             <th scope="col">Quantity</th>
-            <th scope="col">Action</th>
+            <th scope="col" class="text-center">Actions</th>
         </tr>
         </thead>
+
         <tbody>
-        <tr th:each="product: ${products}">
+        <tr th:each="product : ${products}">
             <td th:text="${product.productName}"></td>
             <td th:text="${product.productQuantity}"></td>
-            <td>
+            <td class="text-center">
+
                 <a th:href="@{/product/edit/{id}(id=${product.productId})}"
                    class="btn btn-warning btn-sm">
                     Edit
                 </a>
+
+                <form th:action="@{/product/delete/{id}(id=${product.productId})}"
+                      method="post"
+                      style="display:inline;">
+                    <button type="submit"
+                            class="btn btn-danger btn-sm"
+                            onclick="return confirm('Are you sure you want to delete this product?');">
+                        Delete
+                    </button>
+                </form>
+
             </td>
         </tr>
         </tbody>
     </table>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous">
+</script>
+
 </body>
 </html>
